# src/main/kotlin/com/valr/order_book/api/TradeController.kt
@@ -1,8 +1,8 @@
 package com.valr.order_book.api
 
 import com.valr.order_book.controller.TradeApiDelegate
-import com.valr.order_book.model.*
-import com.valr.order_book.repository.OrderRepository
+import com.valr.order_book.model.CurrencyPairDto
+import com.valr.order_book.model.TradeDto
 import com.valr.order_book.service.TradeService
 import lombok.AllArgsConstructor
 import org.springframework.http.ResponseEntity
@@ -12,9 +12,8 @@ import java.time.LocalDateTime
 @Service
 @AllArgsConstructor
 class TradeController(
-    private val tradeService: TradeService,
-    private val orderRepository: OrderRepository
-    ) : TradeApiDelegate {
+    private val tradeService: TradeService
+) : TradeApiDelegate {
 
     override fun tradeHistory(
         currencyPair: CurrencyPairDto,
@@ -22,12 +21,7 @@ class TradeController(
         limit: Int,
         startTime: LocalDateTime?,
         endTime: LocalDateTime?
-    ): ResponseEntity<List<TradeOrderDto>> {
-        val list = orderRepository.tradeHistory(currencyPair, skip, limit, startTime, endTime)
+    ): ResponseEntity<List<TradeDto>> {
         return ResponseEntity.ok(tradeService.tradeHistory(currencyPair, skip, limit, startTime, endTime))
-    }
-
-    override fun orderBook(currencyPair: CurrencyPairDto): ResponseEntity<OrderBookDto> {
-        return ResponseEntity.ok(tradeService.orderBook(currencyPair))
     }
 }
