# src/main/resources/api-spec.yaml
@@ -72,7 +72,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/TradeOrder'
+                  $ref: '#/components/schemas/Trade'
         '204':
           description: No Content
         '404':
@@ -80,11 +80,36 @@ paths:
           content:
             'application/json':
               schema:
-                $ref: '#/components/schemas/TradeOrder'
+                $ref: '#/components/schemas/Trade'
+
+  # Order
+  /v1/orders/limit:
+    post:
+      tags:
+        - Order
+      summary: Place a limit order
+      description: Submit a limit order
+      operationId: place-order
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderRequest'
+        required: true
+      responses:
+        '200':
+          description: Place a limit order
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderResponse'
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/OrderResponse'
   /v1/{currencyPair}/orderbook:
     get:
       tags:
-        - Trade
+        - Order
       operationId: order-book
       summary: order book
       parameters:
@@ -108,31 +133,6 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/OrderBook'
-
-  # Order
-  /v1/orders/limit:
-    post:
-      tags:
-        - Order
-      summary: Place a limit order
-      description: Submit a limit order
-      operationId: place-limit-order
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/OrderRequest'
-        required: true
-      responses:
-        '200':
-          description: Place a limit order
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/OrderResponse'
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/OrderResponse'
 
 # SCHEMAS
 components:
@@ -257,6 +257,27 @@ components:
           type: string
           format: date-time
           example: '2023-01-01T17:32:28Z'
+    Trade:
+      type: object
+      properties:
+        price:
+          type: number
+        quantity:
+          type: number
+        currencyPair:
+          $ref: '#/components/schemas/CurrencyPair'
+        tradedAt:
+          type: string
+          format: date-time
+        takerSide:
+          $ref: '#/components/schemas/Side'
+        sequenceId:
+          type: integer
+          format: int64
+        id:
+          type: string
+        quoteVolume:
+          type: number
     Order:
       type: object
       properties:
@@ -266,7 +287,7 @@ components:
           type: number
         price:
           type: number
-        currencyPair:
+        pair:
           $ref: '#/components/schemas/CurrencyPair'
         orderCount:
           type: integer
